start new mobile first styling of pricing__info

--- a/index.pricing.partial.html
+++ b/index.pricing.partial.html
@@ -35,64 +35,69 @@
           <use fill-rule="nonzero" xlink:href="#a-1704797658501"></use>
         </svg>
       </button>
-
-      <div class="pricing__carousel-inner">
-        <article class="pricing__carousel-slide">
-          <p class="pricing__price">$50</p>
-          <h3 class="pricing__plan-title">Initial Checkup</h3>
-          <ul class="pricing__features">
-            <li class="pricing__features-checkmark">
-              Checkup by a veterinarian
-            </li>
-            <li class="pricing__features-checkmark">Care recommendations</li>
-            <li class="pricing__features-crossmark">Laboratory tests</li>
-            <li class="pricing__features-crossmark">Dental care</li>
-          </ul>
-          <div class="pricing__select-button mt-md-3 mb-md-5">
-            <a href="#" class="pricing__select-plan"
-              ><span class="pricing__select-bn-content">Select Plan</span
-              ><span class="pricing__select-bn-arrow">&rarr;</span>
-            </a>
-          </div>
-        </article>
-      </div>
-      <div class="pricing__carousel-inner">
-        <article class="pricing__carousel-slide">
-          <p class="pricing__price">$75</p>
-          <h3 class="pricing__plan-title">Full Checkup</h3>
-          <ul class="pricing__features">
-            <li class="pricing__features-checkmark">
-              Checkup by a veterinarian
-            </li>
-            <li class="pricing__features-checkmark">Checkup by a dentist</li>
-            <li class="pricing__features-checkmark">Laboratory tests</li>
-            <li class="pricing__features-crossmark">Preventive vaccination</li>
-          </ul>
-          <div class="pricing__select-button">
-            <a href="#" class="pricing__select-plan"
-              ><span class="pricing__select-bn-content">Select Plan</span
-              ><span class="pricing__select-bn-arrow">&rarr;</span>
-            </a>
-          </div>
-        </article>
-      </div>
-      <div class="pricing__carousel-inner">
-        <article class="pricing__carousel-slide">
-          <p class="pricing__price">$100</p>
-          <h3 class="pricing__plan-title">Vaccination</h3>
-          <ul class="pricing__features">
-            <li class="pricing__features-checkmark">3 available features</li>
-            <li class="pricing__features-checkmark">10 requests per month</li>
-            <li class="pricing__features-checkmark">General support</li>
-            <li class="pricing__features-checkmark">Personal consultations</li>
-          </ul>
-          <div class="pricing__select-button">
-            <a href="#" class="pricing__select-plan"
-              ><span class="pricing__select-bn-content">Select Plan</span
-              ><span class="pricing__select-bn-arrow">&rarr;</span>
-            </a>
-          </div>
-        </article>
+      <div class="pricing__carousel-wrapper">
+        <div class="pricing__carousel-inner">
+          <article class="pricing__carousel-slide">
+            <p class="pricing__price">$50</p>
+            <h3 class="pricing__plan-title">Initial Checkup</h3>
+            <ul class="pricing__features">
+              <li class="pricing__features-checkmark">
+                Checkup by a veterinarian
+              </li>
+              <li class="pricing__features-checkmark">Care recommendations</li>
+              <li class="pricing__features-crossmark">Laboratory tests</li>
+              <li class="pricing__features-crossmark">Dental care</li>
+            </ul>
+            <div class="pricing__select-button mt-md-3 mb-md-5">
+              <a href="#" class="pricing__select-plan"
+                ><span class="pricing__select-bn-content">Select Plan</span
+                ><span class="pricing__select-bn-arrow">&rarr;</span>
+              </a>
+            </div>
+          </article>
+        </div>
+        <div class="pricing__carousel-inner">
+          <article class="pricing__carousel-slide">
+            <p class="pricing__price">$75</p>
+            <h3 class="pricing__plan-title">Full Checkup</h3>
+            <ul class="pricing__features">
+              <li class="pricing__features-checkmark">
+                Checkup by a veterinarian
+              </li>
+              <li class="pricing__features-checkmark">Checkup by a dentist</li>
+              <li class="pricing__features-checkmark">Laboratory tests</li>
+              <li class="pricing__features-crossmark">
+                Preventive vaccination
+              </li>
+            </ul>
+            <div class="pricing__select-button">
+              <a href="#" class="pricing__select-plan"
+                ><span class="pricing__select-bn-content">Select Plan</span
+                ><span class="pricing__select-bn-arrow">&rarr;</span>
+              </a>
+            </div>
+          </article>
+        </div>
+        <div class="pricing__carousel-inner">
+          <article class="pricing__carousel-slide">
+            <p class="pricing__price">$100</p>
+            <h3 class="pricing__plan-title">Vaccination</h3>
+            <ul class="pricing__features">
+              <li class="pricing__features-checkmark">3 available features</li>
+              <li class="pricing__features-checkmark">10 requests per month</li>
+              <li class="pricing__features-checkmark">General support</li>
+              <li class="pricing__features-checkmark">
+                Personal consultations
+              </li>
+            </ul>
+            <div class="pricing__select-button">
+              <a href="#" class="pricing__select-plan"
+                ><span class="pricing__select-bn-content">Select Plan</span
+                ><span class="pricing__select-bn-arrow">&rarr;</span>
+              </a>
+            </div>
+          </article>
+        </div>
       </div>
       <button type="button" class="pricing__button-right">
         <svg class="pricing__button-next" viewBox="0 8 30 30">
