div classes added

--- a/index.service-carousel.partial.html
+++ b/index.service-carousel.partial.html
@@ -45,5 +45,5 @@
     </ul>
   </div>
 
-  <div class="arrow arrow-left"></div>
-  <div class="arrow arrow-right"></div>
+  <div class="arrow arrow-left"><img src="img/left-arrow.png" alt="left-arrow">
+  <div class="arrow arrow-right"><img src="img/right-arrow.png" alt="right-arrow">
