div class added

--- a/index.service-carousel.partial.html
+++ b/index.service-carousel.partial.html
@@ -45,5 +45,12 @@
     </ul>
   </div>
 
-  <div class="arrow arrow-left"><img src="img/left-arrow.png" alt="left-arrow">
-  <div class="arrow arrow-right"><img src="img/right-arrow.png" alt="right-arrow">
+  <div class="carousel__nav">
+    <button class="carousel__indicator carousel__indicator--active" type="button" data-slide-to="0"></button>
+    <button class="carousel__indicator" type="button" data-slide-to="1"></button>
+    <button class="carousel__indicator" type="button" data-slide-to="2"></button>
+    <button class="carousel__indicator" type="button" data-slide-to="3"></button>
+    <button class="carousel__indicator" type="button" data-slide-to="4"></button>
+    <button class="carousel__indicator" type="button" data-slide-to="4"></button>
+  </div>
+</div>
