--- a/index.about-us.partial.html
+++ b/index.about-us.partial.html
@@ -4,11 +4,11 @@
     <p class="description">Our veterinary clinic has been operating for over 20 years. We have successfully cured
         thousands of pets, from dogs and cats to exotic pets such as parrots, monkeys, etc.</p>
     <ul class="services-list">
-        <li class="service-item">Ratologists, felinologists, cynologists, and other specialists;</li>
-        <li class="service-item">All necessary examinations in one comfortable place;</li>
-        <li class="service-item">A large list of related services at reasonable prices.</li>
+        <li class="service-item"><img class = "dog_print" src="img/dog_print.jpg" alt="print" style="display: inline;"> Ratologists, felinologists, cynologists, and other specialists;</li>
+        <li class="service-item"><img class = "dog_print" src="img/dog_print.jpg" alt="print" style="display: inline;"> All necessary examinations in one comfortable place;</li>
+        <li class="service-item"><img class = "dog_print" src="img/dog_print.jpg" alt="print" style="display: inline;"> A large list of related services at reasonable prices.</li>
     </ul>
-    <a href="#" class="btn pricing-link">See Pricing</a>
+    <a href="#" class="pricing_button">See Pricing</a>
     <div class="staff-image">
         <img src="https://res2.weblium.site/res/5f66341807730000225f82ac/5f682a08d7f83a0021b6d54d_optimized_951_c951x837-0x0.webp"
             alt="Our Staff">
