--- a/index.about-us.partial.html
+++ b/index.about-us.partial.html
@@ -1,18 +1,30 @@
-<section class="about-us">
-    <h2 class="title">About Us</h2>
-    <p class="intro">We Do Our Best to Keep Your Pets Healthy</p>
-    <p class="description">Our veterinary clinic has been operating for over 20 years. We have successfully cured
-        thousands of pets, from dogs and cats to exotic pets such as parrots, monkeys, etc.</p>
-    <ul class="services-list">
-        <li class="service-item"><img class = "dog_print" src="img/dog_print.jpg" alt="print" style="display: inline;"> Ratologists, felinologists, cynologists, and other specialists;</li>
-        <li class="service-item"><img class = "dog_print" src="img/dog_print.jpg" alt="print" style="display: inline;"> All necessary examinations in one comfortable place;</li>
-        <li class="service-item"><img class = "dog_print" src="img/dog_print.jpg" alt="print" style="display: inline;"> A large list of related services at reasonable prices.</li>
-    </ul>
-    <a href="#" class="pricing_button">See Pricing</a>
-    <div class="staff-image">
-        <img src="https://res2.weblium.site/res/5f66341807730000225f82ac/5f682a08d7f83a0021b6d54d_optimized_951_c951x837-0x0.webp"
-            alt="Our Staff">
+<section class="about-us col-8 mx-auto container-lg d-flex flex-column flex-lg-row mt-5">
+    <div class="col-12 col-lg-6">
+        <h2 class="title">About Us </h2>
+        <div id="employeeCounterDisplay">We have <span id="workerCount">...</span> workers.</div>
+        <p class="intro">We Do Our Best to Keep Your Pets Healthy</p>
+        <p class="description">Our veterinary clinic has been operating for over 20 years. We have successfully cured
+            thousands of pets, from dogs and cats to exotic pets such as parrots, monkeys, etc.</p>
+        <ul class="services-list">
+            <li class="service-item"><img class="dog_print" src="img/dog_print.jpg" alt="print"
+                                          style="display: inline;"> Ratologists, felinologists, cynologists, and other
+                specialists;
+            </li>
+            <li class="service-item"><img class="dog_print" src="img/dog_print.jpg" alt="print"
+                                          style="display: inline;"> All necessary examinations in one comfortable place;
+            </li>
+            <li class="service-item"><img class="dog_print" src="img/dog_print.jpg" alt="print"
+                                          style="display: inline;"> A large list of related services at reasonable
+                prices.
+            </li>
+        </ul>
+        <a href="#" class="pricing_button">See Pricing</a>
     </div>
-    <div id="employeeCounterDisplay">We have <span id="workerCount">...</span> workers.</div>
-    <script src="js/workers-counter.js"></script>
+    <div class="col-12 col-lg-6">
+        <div class="staff-image">
+            <img src="https://res2.weblium.site/res/5f66341807730000225f82ac/5f682a08d7f83a0021b6d54d_optimized_951_c951x837-0x0.webp"
+                 alt="Our Staff">
+        </div>
+    </div>
 </section>
+<script src="js/workers-counter.js"></script>
