--- a/index.service-carousel.partial.html
+++ b/index.service-carousel.partial.html
@@ -45,12 +45,13 @@
     </ul>
   </div>
 
-  <div class="carousel__nav">
-    <button class="carousel__indicator carousel__indicator--active" type="button" data-slide-to="0"></button>
-    <button class="carousel__indicator" type="button" data-slide-to="1"></button>
-    <button class="carousel__indicator" type="button" data-slide-to="2"></button>
-    <button class="carousel__indicator" type="button" data-slide-to="3"></button>
-    <button class="carousel__indicator" type="button" data-slide-to="4"></button>
-    <button class="carousel__indicator" type="button" data-slide-to="4"></button>
-  </div>
+  <div class="veterinar-carousel container-lg col-8 mx-auto d-flex flex-column">
+    <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+      <ol class="carousel-indicators bg-info mt-5 col-2 mx-auto pr-0 service-carousel__round">
+        <li data-target="Pet Grooming" data-slide-to="0" class="active"></li>
+        <li data-target="Pet Vaccination" data-slide-to="1"></li>
+        <li data-target="Surgeries&Dental Care" data-slide-to="2"></li>
+        <li data-target="Pet Adoptation" data-slide-to="3"></li>
+        <li data-target="Pet Sitting" data-slide-to="4"></li>
+        <li data-target="Microchipping" data-slide-to="5"></li>
 </div>
