--- a/index.contacts.partial.html
+++ b/index.contacts.partial.html
@@ -52,7 +52,7 @@
                         <input class="contacts__form-box-name" type="text" name="full-name"
                             placeholder="Enter your full name*" required>
                         <input class="contacts__form-box-tel" type="tel" name="full-name"
-                            placeholder="Enter your tel*" required>
+                            placeholder="Enter your phone number*" required>
                         <input class="contacts__form-box-email" type="email" name="full-name"
                             placeholder="Enter your email*" required>
                         <textarea class="contacts__form-box-comments" name="comments" cols="30" rows="10"
