--- a/index.service-carousel.partial.html
+++ b/index.service-carousel.partial.html
@@ -84,16 +84,8 @@
     <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
       <span class="carousel-control-next-icon bg-dark service-carousel__round" aria-hidden="true"></span>
       <span class="sr-only">Next</span>
-      <button class="partners__carousel-btn-prev">
-        <svg class="arrow-svg_1j4" viewBox="0 0 30 30"><defs><path d="M19.533 15l-9.1-9.45c-.577-.6-.577-1.5 0-2.1.578-.6 1.445-.6 2.023 0l10.11 10.5c.29.3.434.75.434 1.05 0 .45-.144.75-.433 1.05l-10.111 10.5c-.29.3-.578.45-1.012.45-.433 0-.722-.15-1.01-.45-.578-.6-.578-1.5 0-2.1l9.1-9.45z" id="a-1704748140718"></path></defs><use fill-rule="nonzero" opacity=".8" xlink:href="#a-1704748140718"></use></svg>
-    </button>
-    <button class="partners__carousel-btn-next">
-      <svg class="partners__arrow-svg" viewBox="0 0 30 30">
-          <defs>
-              <path
-                      d="M19.533 15l-9.1-9.45c-.577-.6-.577-1.5 0-2.1.578-.6 1.445-.6 2.023 0l10.11 10.5c.29.3.434.75.434 1.05 0 .45-.144.75-.433 1.05l-10.111 10.5c-.29.3-.578.45-1.012.45-.433 0-.722-.15-1.01-.45-.578-.6-.578-1.5 0-2.1l9.1-9.45z"
-                      id="arrow-icon"
-              ></path>
-    </a>
+      <button type="button" class="w-slider-arrow w-slider-arrow--prev slider-arrow_Yvf slider-arrow--prev_Eis slider-arrow--with-dots_Phm slick-prev slick-arrow" aria-disabled="false" style=""><div class="slider-arrow__click-zone_uLX"></div><svg class="arrow-svg_1j4" viewBox="0 0 30 30"><defs><path d="M19.533 15l-9.1-9.45c-.577-.6-.577-1.5 0-2.1.578-.6 1.445-.6 2.023 0l10.11 10.5c.29.3.434.75.434 1.05 0 .45-.144.75-.433 1.05l-10.111 10.5c-.29.3-.578.45-1.012.45-.433 0-.722-.15-1.01-.45-.578-.6-.578-1.5 0-2.1l9.1-9.45z" id="a-1706886836795"></path></defs><use fill-rule="nonzero" opacity=".8" xlink:href="#a-1706886836795"></use></svg></button>
   </div>
+  <button type="button" class="w-slider-arrow w-slider-arrow--prev slider-arrow_Yvf slider-arrow--prev_Eis slider-arrow--with-dots_Phm slick-prev slick-arrow" aria-disabled="false" style=""><div class="slider-arrow__click-zone_uLX"></div><svg class="arrow-svg_1j4" viewBox="0 0 30 30"><defs><path d="M19.533 15l-9.1-9.45c-.577-.6-.577-1.5 0-2.1.578-.6 1.445-.6 2.023 0l10.11 10.5c.29.3.434.75.434 1.05 0 .45-.144.75-.433 1.05l-10.111 10.5c-.29.3-.578.45-1.012.45-.433 0-.722-.15-1.01-.45-.578-.6-.578-1.5 0-2.1l9.1-9.45z" id="a-1706886836795"></path></defs><use fill-rule="nonzero" opacity=".8" xlink:href="#a-1706886836795"></use></svg></button>
+  <div class="slider-arrow__click-zone_uLX"></div>
 </div>
