pet grooming image

--- a/index.service-carousel.partial.html
+++ b/index.service-carousel.partial.html
@@ -12,7 +12,7 @@
     <div class="carousel-inner">
       <div class="carousel-item active card h-100">
         <img class="service-carousel__img img-fluid card-img-top rounded-circle align-center mx-auto mt-5 mb-4"
-             src="img/scissors.gif"
+             src="img/grooming.png"
              alt="Card image cap">
         <div class="card-body">
           <h4 class="card-title text-center">Pet Grooming </h4>
