--- a/index.service-carousel.partial.html
+++ b/index.service-carousel.partial.html
@@ -16,7 +16,7 @@
              alt="Card image cap">
         <div class="card-body">
           <h4 class="card-title text-center">Pet Grooming </h4>
-          <p class="card-text carousel-any-p__subtitle fst-italic">Our groomers will make your pet the most beautiful. Grooming in our clinic is absolutely safe and comfortable
+          <p1 class="card-text carousel-any-p__subtitle fst-italic">Our groomers will make your pet the most beautiful. Grooming in our clinic is absolutely safe and comfortable
             for your pet.</p>
           <p class="card-text carousel-any-p__subtitle bold text-center mb-5">Read More ➞</p>
         </div>
@@ -27,7 +27,7 @@
              alt="Card image cap">
         <div class="card-body">
           <h4 class="card-title text-center">Pet Vaccination </h4>
-          <p class="card-text carousel-any-p__subtitle fst-italic">Our veterinary clinic offers vaccinations for your pets. We use only certified vaccines and check the
+          <p1 class="card-text carousel-any-p__subtitle fst-italic">Our veterinary clinic offers vaccinations for your pets. We use only certified vaccines and check the
             allergic reaction.</p>
           <p class="card-text carousel-any-p__subtitle bold text-center mb-5">Read More ➞</p>
         </div>
@@ -38,7 +38,7 @@
              alt="Card image cap">
         <div class="card-body">
           <h4 class="card-title text-center">Surgeries & Dental Care </h4>
-          <p class="card-text carousel-any-p__subtitle fst-italic">Our surgeons and dentists will perform all the necessary procedures and interventions to restore the health
+          <p1 class="card-text carousel-any-p__subtitle fst-italic">Our surgeons and dentists will perform all the necessary procedures and interventions to restore the health
             of your pet.</p>
           <p class="card-text carousel-any-p__subtitle bold text-center mb-5">Read More ➞</p>
         </div>
@@ -50,7 +50,7 @@
              alt="Card image cap">
         <div class="card-body">
           <h4 class="card-title text-center">Pet Adoption </h4>
-          <p class="card-text carousel-any-p__subtitle fst-italic">If you want to adopt a pet, our veterinary clinic will help you determine its condition. We also can help
+          <p1 class="card-text carousel-any-p__subtitle fst-italic">If you want to adopt a pet, our veterinary clinic will help you determine its condition. We also can help
             with choosing a pet.</p>
           <p class="card-text carousel-any-p__subtitle bold text-center mb-5">Read More ➞</p>
         </div>
@@ -61,7 +61,7 @@
              alt="Card image cap">
         <div class="card-body">
           <h4 class="card-title text-center">Pet Sitting</h4>
-          <p class="card-text carousel-any-p__subtitle fst-italic">If you need someone to look after your pet when you`re away, our specialists will be happy to do it.</p>
+          <p1 class="card-text carousel-any-p__subtitle fst-italic">If you need someone to look after your pet when you`re away, our specialists will be happy to do it.</p>
           <p class="card-text carousel-any-p__subtitle bold text-center mb-5">Read More ➞</p>
         </div>
       </div>
@@ -71,7 +71,7 @@
              alt="Card image cap">
         <div class="card-body">
           <h4 class="card-title text-center">Microchipping</h4>
-          <p class="card-text carousel-any-p__subtitle fst-italic">The chip contains a unique code with important information. If your pet is lost, it will be easy to return it
+          <p1 class="card-text carousel-any-p__subtitle fst-italic">The chip contains a unique code with important information. If your pet is lost, it will be easy to return it
             to you</p>
           <p class="card-text carousel-any-p__subtitle bold text-center mb-5">Read More ➞</p>
         </div>
