div class border

--- a/index.service-carousel.partial.html
+++ b/index.service-carousel.partial.html
@@ -20,6 +20,8 @@
             for your pet.</p>
             <p class="card-text carousel-any-p__subtitle bold text-center mb-5">Read More ➞</p>
         </div>
+        <div class="border-0">
+        </div>
       </div>
       <div class="carousel-item card h-0 border">
         <img class="service-carousel__img img-fluid card-img-top rounded-circle align-center mx-auto mt-5 mb-4"
@@ -30,6 +32,8 @@
             pets. We use only certified vaccines and check the
             allergic reaction.</p>
             <p class="card-text carousel-any-p__subtitle bold text-center mb-5">Read More ➞</p>
+        </div>
+        <div class="border-0">
         </div>
       </div>
       <div class="carousel-item card h-0 border">
@@ -42,6 +46,8 @@
             of your pet.</p>
             <p class="card-text carousel-any-p__subtitle bold text-center mb-5">Read More ➞</p>
         </div>
+        <div class="border-0">
+        </div>
       </div>
 
       <div class="carousel-item card h-0 border">
@@ -53,6 +59,8 @@
             will help you determine its condition. We also can help
             with choosing a pet.</p>
             <p class="card-text carousel-any-p__subtitle bold text-center mb-5">Read More ➞</p>
+            <div class="border-0">
+            </div>
         </div>
       </div>
       <div class="carousel-item card h-0 border">
@@ -64,6 +72,8 @@
             you`re away, our specialists will be happy to do it.</p>
             <p class="card-text carousel-any-p__subtitle bold text-center mb-5">Read More ➞</p>
         </div>
+        <div class="border-0">
+          </div>
       </div>
       <div class="carousel-item card h-0 border">
         <img class="service-carousel__img img-fluid card-img-top rounded-circle align-center mx-auto mt-5 mb-4"
@@ -75,6 +85,8 @@
             to you</p>
             <p class="card-text carousel-any-p__subtitle bold text-center mb-5">Read More ➞</p>
         </div>
+      </div>
+      <div class="border-0">
       </div>
     </div>
     <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
