--- a/index.service-carousel.partial.html
+++ b/index.service-carousel.partial.html
@@ -10,7 +10,7 @@
       <li data-target="#carouselExampleIndicators" data-slide-to="6"></li>
     </ol>
     <div class="carousel-inner">
-      <div class="carousel-item active card h-0 border" >
+      <div class="carousel-item active card" >
         <img class="service-carousel__img img-fluid card-img-top rounded-circle align-center mx-auto mt-5 mb-4"
           src="img/grooming.png" alt="Card image cap">
         <div class="card-body">
@@ -23,7 +23,7 @@
         <div class="border-0">
         </div>
       </div>
-      <div class="carousel-item card h-0 border">
+      <div class="carousel-item cardr">
         <img class="service-carousel__img img-fluid card-img-top rounded-circle align-center mx-auto mt-5 mb-4"
           src="img/vaccacination.png" alt="Card image cap">
         <div class="card-body">
@@ -36,7 +36,7 @@
         <div class="border-0">
         </div>
       </div>
-      <div class="carousel-item card h-0 border">
+      <div class="carousel-item card">
         <img class="service-carousel__img img-fluid card-img-top rounded-circle align-center mx-auto mt-5 mb-4"
           src="img/dental.png" alt="Card image cap">
         <div class="card-body">
@@ -50,7 +50,7 @@
         </div>
       </div>
 
-      <div class="carousel-item card h-0 border">
+      <div class="carousel-item card">
         <img class="service-carousel__img img-fluid card-img-top rounded-circle align-center mx-auto mt-5 mb-4"
           src="img/adopt.png" alt="Card image cap">
         <div class="card-body">
@@ -63,7 +63,7 @@
             </div>
         </div>
       </div>
-      <div class="carousel-item card h-0 border">
+      <div class="carousel-item card">
         <img class="service-carousel__img img-fluid card-img-top rounded-circle align-center mx-auto mt-5 mb-4"
           src="img/pet-sit.png" alt="Card image cap">
         <div class="card-body">
@@ -75,7 +75,7 @@
         <div class="border-0">
           </div>
       </div>
-      <div class="carousel-item card h-0 border">
+      <div class="carousel-item card ">
         <img class="service-carousel__img img-fluid card-img-top rounded-circle align-center mx-auto mt-5 mb-4"
           src="img/microc.png" alt="Card image cap">
         <div class="card-body">
