--- a/index.service-carousel.partial.html
+++ b/index.service-carousel.partial.html
@@ -11,6 +11,7 @@
     </ol>
     <div class="carousel-inner">
       <div class="carousel-item active card" >
+        <div class="carousel-item no-border">
         <img class="service-carousel__img img-fluid card-img-top rounded-circle align-center mx-auto mt-5 mb-4"
           src="img/grooming.png" alt="Card image cap">
         <div class="card-body">
@@ -19,11 +20,11 @@
             Grooming in our clinic is absolutely safe and comfortable
             for your pet.</p>
             <p class="card-text carousel-any-p__subtitle bold text-center mb-5">Read More ➞</p>
-        </div>
-        <div class="border-0">
+          </div>
         </div>
       </div>
-      <div class="carousel-item cardr">
+      <div class="carousel-item Card">
+        <div class="carousel-item no-border">
         <img class="service-carousel__img img-fluid card-img-top rounded-circle align-center mx-auto mt-5 mb-4"
           src="img/vaccacination.png" alt="Card image cap">
         <div class="card-body">
@@ -33,10 +34,10 @@
             allergic reaction.</p>
             <p class="card-text carousel-any-p__subtitle bold text-center mb-5">Read More ➞</p>
         </div>
-        <div class="border-0">
-        </div>
+      </div>
       </div>
       <div class="carousel-item card">
+        <div class="carousel-item no-border">
         <img class="service-carousel__img img-fluid card-img-top rounded-circle align-center mx-auto mt-5 mb-4"
           src="img/dental.png" alt="Card image cap">
         <div class="card-body">
@@ -46,11 +47,11 @@
             of your pet.</p>
             <p class="card-text carousel-any-p__subtitle bold text-center mb-5">Read More ➞</p>
         </div>
-        <div class="border-0">
-        </div>
+      </div>
       </div>
 
       <div class="carousel-item card">
+        <div class="carousel-item no-border">
         <img class="service-carousel__img img-fluid card-img-top rounded-circle align-center mx-auto mt-5 mb-4"
           src="img/adopt.png" alt="Card image cap">
         <div class="card-body">
@@ -59,11 +60,11 @@
             will help you determine its condition. We also can help
             with choosing a pet.</p>
             <p class="card-text carousel-any-p__subtitle bold text-center mb-5">Read More ➞</p>
-            <div class="border-0">
-            </div>
         </div>
       </div>
+      </div>
       <div class="carousel-item card">
+        <div class="carousel-item no-border">
         <img class="service-carousel__img img-fluid card-img-top rounded-circle align-center mx-auto mt-5 mb-4"
           src="img/pet-sit.png" alt="Card image cap">
         <div class="card-body">
@@ -72,10 +73,10 @@
             you`re away, our specialists will be happy to do it.</p>
             <p class="card-text carousel-any-p__subtitle bold text-center mb-5">Read More ➞</p>
         </div>
-        <div class="border-0">
-          </div>
+        </div>
       </div>
       <div class="carousel-item card ">
+        <div class="carousel-item no-border">
         <img class="service-carousel__img img-fluid card-img-top rounded-circle align-center mx-auto mt-5 mb-4"
           src="img/microc.png" alt="Card image cap">
         <div class="card-body">
@@ -85,8 +86,7 @@
             to you</p>
             <p class="card-text carousel-any-p__subtitle bold text-center mb-5">Read More ➞</p>
         </div>
-      </div>
-      <div class="border-0">
+        </div>
       </div>
     </div>
     <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
