styling mobile first pricing content and plan

--- a/index.pricing.partial.html
+++ b/index.pricing.partial.html
@@ -48,7 +48,7 @@
               <li class="pricing__features-crossmark">Laboratory tests</li>
               <li class="pricing__features-crossmark">Dental care</li>
             </ul>
-            <div class="pricing__select-button mt-md-3 mb-md-5">
+            <div class="pricing__select-button">
               <a href="#" class="pricing__select-plan"
                 ><span class="pricing__select-bn-content">Select Plan</span
                 ><span class="pricing__select-bn-arrow">&rarr;</span>
