--- a/header.partial.html
+++ b/header.partial.html
@@ -18,13 +18,13 @@
 
                 <ul class="navbar-nav mx-auto bold">
                     <li class="nav-item active mx-auto">
-                        <a class="nav-link" href="discoveries.html">Discoveries of Vet.Med</a>
+                        <a class="nav-link" href="discov-on-react.html">Discoveries (onReact)</a>
                     </li>
                     <li class="nav-item active mx-auto">
                         <a class="nav-link" href="facts.html">Facts</a>
                     </li>
                     <li class="nav-item active mx-auto">
-                        <a class="nav-link" href="react-test-page.html">React</a>
+                        <a class="nav-link" href="discov-on-react.html">Your Wishes</a>
                     </li>
                     <li class="nav-item active mx-auto">
                         <a class="nav-link" href="#">Testimonials</a>
